[gd_scene load_steps=5 format=3 uid="uid://b5erlu86wh5p1"]

[ext_resource type="PackedScene" uid="uid://ckm8b3hgh0fb4" path="res://container.tscn" id="1_5nf1t"]
[ext_resource type="Script" path="res://main.gd" id="1_112vy"]
[ext_resource type="Texture2D" uid="uid://boev3txqriujc" path="res://assets/backgrounds/container.png" id="3_6tbg0"]
[ext_resource type="Texture2D" uid="uid://b68jgyix7vvef" path="res://assets/suika_blob1.png" id="4_2hcwe"]

[node name="Main" type="Node2D"]
script = ExtResource("1_112vy")

[node name="Container" parent="." instance=ExtResource("1_5nf1t")]
position = Vector2(192, 390)

[node name="Container2" type="Sprite2D" parent="."]
position = Vector2(613, 437)
scale = Vector2(0.5625, 0.816406)
texture = ExtResource("3_6tbg0")

[node name="StaticBody2D" type="StaticBody2D" parent="Container2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Container2/StaticBody2D"]
polygon = PackedVector2Array(186, -127, 171, 195, -138, 191, -150, -119, -164, -124, -161, 217, 199, 221, 205, -127)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -2.0
offset_top = 17.0
offset_right = 126.0
offset_bottom = 43.0
text = "Current Marble: "
metadata/_edit_use_anchors_ = true

[node name="NextLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 57.0
offset_right = 106.0
offset_bottom = 83.0
text = "Next Marble: "

[node name="drop_sprite" type="Sprite2D" parent="."]
position = Vector2(516, 81)
texture = ExtResource("4_2hcwe")
