[gd_scene load_steps=5 format=3 uid="uid://b5erlu86wh5p1"]

[ext_resource type="Script" path="res://main.gd" id="1_f6q21"]
[ext_resource type="Texture2D" uid="uid://cormgwc1lnels" path="res://assets/backgrounds/office.png" id="2_af7h7"]
[ext_resource type="Texture2D" uid="uid://b68jgyix7vvef" path="res://assets/suika_blob1.png" id="3_31c8a"]
[ext_resource type="Script" path="res://scenes/game/cursor.gd" id="4_p21gx"]

[node name="MarbleGame" type="Node2D"]
script = ExtResource("1_f6q21")

[node name="BackgroundCanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="BackgroundCanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="BackgroundCanvasLayer/Control"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 960.0
texture = ExtResource("2_af7h7")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(286, 499)
scale = Vector2(1.12891, 1.56241)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(260, -160, 260, 160, -190, 160, -190, -160, -275, -190, -275, 300, 325, 300, 325, -190)

[node name="UICanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UICanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CurrentLabel" type="Label" parent="UICanvasLayer/Control"]
layout_mode = 0
offset_left = -2.0
offset_top = 17.0
offset_right = 126.0
offset_bottom = 43.0
text = "Current Marble: "
metadata/_edit_use_anchors_ = true

[node name="NextLabel" type="Label" parent="UICanvasLayer/Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 57.0
offset_right = 106.0
offset_bottom = 83.0
text = "Next Marble: "
metadata/_edit_use_anchors_ = true

[node name="drop_cursor" type="Sprite2D" parent="."]
position = Vector2(570, 255)
texture = ExtResource("3_31c8a")
script = ExtResource("4_p21gx")
